--- a/newpersonaje.html
+++ b/newpersonaje.html
@@ -101,7 +101,7 @@
                     }),
                     success: function(){
                         console.log('creado')
-                        location.href = '/serie.html?idserie='+serie;
+                        location.href = 'serie.html?idserie='+serie;
                     }
                 })
             });
