--- a/updatepersonaje.html
+++ b/updatepersonaje.html
@@ -4,8 +4,145 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="home.html">Series</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="newpersonaje.html">Nuevo personaje</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="updatepersonaje.html">Modificar personaje</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Series
+                        </a>
+                        <ul class="dropdown-menu" id="drop-menu"></ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class='p-3'>
+        <h1>Modificar personaje</h1>
+        <form>
+            <div class="mb-3">
+                <label class="form-label">Serie</label>
+                <select class="form-select" id="series"></select>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Personajes</label>
+                <select class="form-select" id="personajes"></select>
+            </div>
+            <button type="button" class='btn btn-success w-100' id="modificar">Modificar personaje</button>
+            <div class='container mt-3'>
+                <div class='row row-cols-2'>
+                    <div class='col' id="col-serie"></div>
+                    <div class='col' id="col-personaje"></div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="js/jquery-3.7.1.js"></script>
+    <script>
+        let url = 'https://apiseriespersonajes.azurewebsites.net/';
+
+        $(document).ready(function(){
+            let endpoint = 'api/series';
+
+            $.getJSON(url + endpoint, function(data){
+                $.each(data, function(index, serie){
+                    let a = $('<a>', {
+                        href: 'serie.html?id='+serie.idSerie,
+                        text: serie.nombre,
+                        class: 'dropdown-item'
+                    })
+
+                    let li = $('<li>');
+
+                    $(li).append(a);
+                    $('#drop-menu').append(li);
+
+                    let op = $('<option>', {
+                        text: serie.nombre,
+                        value: serie.idSerie
+                    })
+
+                    $('#series').append(op);
+                })
+            })
+
+            let endpoint2 = 'api/personajes';
+
+            $.getJSON(url + endpoint2, function(data){{
+                $.each(data, function(index, personaje){
+
+                    let op = $('<option>', {
+                        text: personaje.nombre,
+                        value: personaje.idPersonaje
+                    })
+
+                    $('#personajes').append(op);
+                })
+            }})
+
+            $('#series').change(function(){
+                let idserie = $('#series').val();
+
+                let endpoint = 'api/series/'+idserie;
+
+                $.getJSON(url + endpoint, function(data){
+                    let contenido = `
+                                    <h1>${data.nombre}</h1>
+                                    <img src="${data.imagen}" class="w-100"/>
+                                `;
+
+                    $('#col-serie').html(contenido);
+                })
+            })
+
+            $('#personajes').change(function(){
+                let idpersonaje = $('#personajes').val();
+
+                let endpoint = 'api/personajes/'+idpersonaje;
+
+                $.getJSON(url + endpoint, function(data){
+                    let contenido = `
+                                    <h1>${data.nombre}</h1>
+                                    <img src="${data.imagen}" class="w-100"/>
+                                `;
+
+                    $('#col-personaje').html(contenido);
+                })
+            })
+
+            $('#modificar').click(function(){
+                let idserie = $('#series').val();
+                let idpersonaje = $('#personajes').val();
+
+                let endpoint = 'api/personajes/'+idpersonaje+'/'+idserie;
+
+                $.ajax({
+                    url: url + endpoint,
+                    method: 'PUT',
+                    success: function(){
+                        console.log('modificado');
+                        location.href = 'serie.html?idserie='+idserie;
+                    }
+                })
+            })
+        })
+    </script>
 </body>
 </html>
